--- a/hizmetler/ceza-hukuku.html
+++ b/hizmetler/ceza-hukuku.html
@@ -47,7 +47,10 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">Pusula Hukuk</a>
+            <a class="navbar-brand" href="../index.html">
+    <img src="/assets/img/logovari.png" alt="Pusula Hukuk Logosu" width="70" class="me-2">
+    Pusula Hukuk
+</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -92,7 +95,7 @@
 
     <!-- Content Section -->
     <section class="projects-section bg-light">
-        <div class="container px-4 px-lg-5">
+        <div class="container px-8 px-lg-5">
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 
                 <div class="col-lg-18">
@@ -136,6 +139,7 @@
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Pusula Hukuk 2025</div>
+        <img src="/assets/img/logovari.png" alt="Firma Logosu" width="200" style="margin-top: 20px;"/>
     </footer>
 
     <!-- Bootstrap core JS-->
@@ -151,7 +155,7 @@
           if (!hizmetlerLink) return;
           if (window.innerWidth < 992) {
             hizmetlerLink.removeAttribute('data-bs-toggle');
-            hizmetlerLink.setAttribute('href', '../hizmetler.html');
+            hizmetlerLink.setAttribute('href', '/hizmetler/hizmetlerimiz.html');
           } else {
             hizmetlerLink.setAttribute('data-bs-toggle', 'dropdown');
             hizmetlerLink.setAttribute('href', '#');
@@ -185,7 +189,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <a href="mailto:pusulaa.hukukk@gmail.com">pusulaa.hukukk@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -195,7 +199,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Telefon</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+90 (553) 289 3660</div>
+                                <a href="tel:+905532893660">+90 (553) 289 3660</a>
                             </div>
                         </div>
                     </div>
