--- a/hizmetler/hizmetlerimiz.html
+++ b/hizmetler/hizmetlerimiz.html
@@ -47,7 +47,10 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">Pusula Hukuk</a>
+            <a class="navbar-brand" href="../index.html">
+    <img src="/assets/img/logovari.png" alt="Pusula Hukuk Logosu" width="70" class="me-2">
+    Pusula Hukuk
+</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -57,9 +60,14 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">Hakkımızda</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#projects">Ekibimiz</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="hizmetlerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Hizmetlerimiz
-                        </a>
+                        <a class="nav-link dropdown-toggle" 
+   href="/hizmetler/hizmetlerimiz.html" 
+   id="hizmetlerDropdown" 
+   role="button" 
+   data-bs-toggle="dropdown" 
+   aria-expanded="false">
+    Hizmetlerimiz
+</a>
                         <ul class="dropdown-menu" aria-labelledby="hizmetlerDropdown">
                             <li><a class="dropdown-item" href="ceza-hukuku.html">Ceza Hukuku</a></li>
                             <li><a class="dropdown-item" href="is-hukuku.html">İş Hukuku</a></li>
@@ -126,6 +134,7 @@
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Pusula Hukuk 2025</div>
+        <img src="/assets/img/logovari.png" alt="Firma Logosu" width="200" style="margin-top: 20px;"/>
     </footer>
 
     <!-- Bootstrap core JS-->
@@ -175,7 +184,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <a href="mailto:pusulaa.hukukk@gmail.com">pusulaa.hukukk@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -185,7 +194,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Telefon</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+90 (553) 289 3660</div>
+                                <a href="tel:+905532893660">+90 (553) 289 3660</a>
                             </div>
                         </div>
                     </div>
@@ -197,5 +206,25 @@
                 </div>
             </div>
         </section>
+        <script>
+document.addEventListener('DOMContentLoaded', function () {
+  const hizmetlerLink = document.getElementById('hizmetlerDropdown');
+
+  function toggleDropdownBehavior() {
+    if (window.innerWidth < 992) {
+      // Mobil: dropdown devre dışı, sayfaya yönlendir
+      hizmetlerLink.removeAttribute('data-bs-toggle');
+      hizmetlerLink.setAttribute('href', '/hizmetler/hizmetlerimiz.html');
+    } else {
+      // Masaüstü: dropdown açık kalmalı
+      hizmetlerLink.setAttribute('data-bs-toggle', 'dropdown');
+      hizmetlerLink.setAttribute('href', '#');
+    }
+  }
+
+  toggleDropdownBehavior();
+  window.addEventListener('resize', toggleDropdownBehavior);
+});
+</script>
 </body>
 </html>
