--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
   Hizmetlerimiz
 </a>
   <ul class="dropdown-menu" aria-labelledby="hizmetlerDropdown">
-    <li><a class="dropdown-item" href="hizmetler/ceza-hukuku.html">Ceza Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/idare-hukuku.html">İdare Hukuku</a></li>
     <li><a class="dropdown-item" href="hizmetler/is-hukuku.html">İş Hukuku</a></li>
     <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">Aile Hukuku</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">İcra Hukuku</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">Ticaret Hukuku</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">İdare Hukuku</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">Milletlerarası Hukuk</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">Miras Hukuku</a></li>
-    <li><a class="dropdown-item" href="hizmetler/aile-hukuku.html">Sigorta Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/icra-hukuku.html">İcra Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/ticaret-hukuku.html">Ticaret Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/ceza-hukuku.html">Ceza Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/milletlerarasi-hukuk.html">Milletlerarası Hukuk</a></li>
+    <li><a class="dropdown-item" href="hizmetler/miras-hukuku.html">Miras Hukuku</a></li>
+    <li><a class="dropdown-item" href="hizmetler/sigorta-hukuku.html">Sigorta Hukuku</a></li>
     
   </ul>
 </li>
