--- a/hizmetler/hizmetlerimiz.html
+++ b/hizmetler/hizmetlerimiz.html
@@ -69,12 +69,12 @@
     Hizmetlerimiz
 </a>
                         <ul class="dropdown-menu" aria-labelledby="hizmetlerDropdown">
-                            <li><a class="dropdown-item" href="ceza-hukuku.html">Ceza Hukuku</a></li>
+                            <li><a class="dropdown-item" href="idare-hukuku.html">İdare Hukuku</a></li>
                             <li><a class="dropdown-item" href="is-hukuku.html">İş Hukuku</a></li>
                             <li><a class="dropdown-item" href="aile-hukuku.html">Aile Hukuku</a></li>
                             <li><a class="dropdown-item" href="icra-hukuku.html">İcra Hukuku</a></li>
                             <li><a class="dropdown-item" href="ticaret-hukuku.html">Ticaret Hukuku</a></li>
-                            <li><a class="dropdown-item" href="idare-hukuku.html">İdare Hukuku</a></li>
+                            <li><a class="dropdown-item" href="ceza-hukuku.html">ceza Hukuku</a></li>
                             <li><a class="dropdown-item" href="milletlerarasi-hukuk.html">Milletlerarası Hukuk</a></li>
                             <li><a class="dropdown-item" href="miras-hukuku.html">Miras Hukuku</a></li>
                             <li><a class="dropdown-item" href="sigorta-hukuku.html">Sigorta Hukuku</a></li>
@@ -96,8 +96,8 @@
                         <h5 class="text-white fw-bold mb-4">Hukuk Dalları</h5>
 
         <div class="hukuk-list d-flex flex-wrap justify-content-center gap-3">
-          <a href="ceza-hukuku.html" class="hukuk-item text-decoration-none text-white">
-            Ceza Hukuku
+          <a href="idare-hukuku.html" class="hukuk-item text-decoration-none text-white">
+            İdare Hukuku
           </a>
           <a href="aile-hukuku.html" class="hukuk-item text-decoration-none text-white">
             Aile Hukuku
@@ -112,8 +112,8 @@
           <a href="ticaret-hukuku.html" class="hukuk-item text-decoration-none text-white">
             Ticaret Hukuku
           </a>
-          <a href="idare-hukuku.html" class="hukuk-item text-decoration-none text-white">
-            İdare Hukuku
+          <a href="ceza-hukuku.html" class="hukuk-item text-decoration-none text-white">
+            Ceza Hukuku
           </a>
           <a href="milletlerarasi-hukuk.html" class="hukuk-item text-decoration-none text-white">
             Milletlerarası Hukuk
