--- a/hizmetler/aile-hukuku.html
+++ b/hizmetler/aile-hukuku.html
@@ -86,12 +86,12 @@
     Hizmetlerimiz
 </a>
                         <ul class="dropdown-menu" aria-labelledby="hizmetlerDropdown">
-                            <li><a class="dropdown-item" href="ceza-hukuku.html">Ceza Hukuku</a></li>
+                            <li><a class="dropdown-item" href="idare-hukuku.html">İdare Hukuku</a></li>
                             <li><a class="dropdown-item" href="is-hukuku.html">İş Hukuku</a></li>
                             <li><a class="dropdown-item" href="aile-hukuku.html">Aile Hukuku</a></li>
                             <li><a class="dropdown-item" href="icra-hukuku.html">İcra Hukuku</a></li>
                             <li><a class="dropdown-item" href="ticaret-hukuku.html">Ticaret Hukuku</a></li>
-                            <li><a class="dropdown-item" href="idare-hukuku.html">İdare Hukuku</a></li>
+                            <li><a class="dropdown-item" href="ceza-hukuku.html">ceza Hukuku</a></li>
                             <li><a class="dropdown-item" href="milletlerarasi-hukuk.html">Milletlerarası Hukuk</a></li>
                             <li><a class="dropdown-item" href="miras-hukuku.html">Miras Hukuku</a></li>
                             <li><a class="dropdown-item" href="sigorta-hukuku.html">Sigorta Hukuku</a></li>
