--- a/hizmetler/hizmetlerimiz.html
+++ b/hizmetler/hizmetlerimiz.html
@@ -74,7 +74,7 @@
                             <li><a class="dropdown-item" href="aile-hukuku.html">Aile Hukuku</a></li>
                             <li><a class="dropdown-item" href="icra-hukuku.html">İcra Hukuku</a></li>
                             <li><a class="dropdown-item" href="ticaret-hukuku.html">Ticaret Hukuku</a></li>
-                            <li><a class="dropdown-item" href="ceza-hukuku.html">ceza Hukuku</a></li>
+                            <li><a class="dropdown-item" href="ceza-hukuku.html">Ceza Hukuku</a></li>
                             <li><a class="dropdown-item" href="milletlerarasi-hukuk.html">Milletlerarası Hukuk</a></li>
                             <li><a class="dropdown-item" href="miras-hukuku.html">Miras Hukuku</a></li>
                             <li><a class="dropdown-item" href="sigorta-hukuku.html">Sigorta Hukuku</a></li>
